# gcontactsync

./: .autotools  .cproject  .gitignore  .hgignore  .project  Makefile  Makefile.am  configure.ac  gcontactsync.c  gcontactsync.dll.dbg  gcontactsync.res  libgcal.dll.dbg  libgcal.res
inc/: gcontactsync.h  gcontactsync_debug.h  gcontactsync_gcal.h  gcontactsync_gui.h  gcontactsync_hacks.h  gcontactsync_sync.h
m4/: dummy.txt
src/: gcontactsync.c  gcontactsync.rc  gcontactsync_debug.c  gcontactsync_gcal.c  gcontactsync_gui.c  gcontactsync_hacks.c  gcontactsync_res.rc  gcontactsync_sync.c  libgcal.rc
